feat: divide getTransactions (common and pagination)
